--- a/src/App.css
+++ b/src/App.css
@@ -75,10 +75,6 @@ button {
   text-align: center;
 }
 
-.updateBtn {
-  
-}
-
 .edit {
   color: white;
   background: rgb(221, 192, 30);
@@ -91,4 +87,17 @@ button {
   background: #dc3545;
   padding: 5px 10px;
   border: none;
+}
+
+@media (max-width: 768px) {
+  .notes-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .note {
+    width: 200px;
+  }
 }
